plugins/wasm-go/extensions/waf-deny/wasmplugin/go_rules/generic_attack/insecure_unserialize.go

//line insecure_unserialize.rl:1
package generic_attack

import (
    "strings"
    "golang.org/x/exp/slices"
)

var fnsForProcess = []string{
	"access", "appendfile", "argv", "availability",
	"caveats", "chmod", "chown", "close", "copyfile", "cp", "createreadstream", "createwritestream",
	"exec", "execfile", "exists",
	"fchmod", "fchown", "fdata", "fdatasync", "fstat", "fsync", "futimes",
	"inodes",
	"lchmod", "link", "lstat", "lutimes",
	"mkdir", "mkdtemp",
	"open", "opendir",
	"read", "readdir", "readfile", "readlink", "readv", "rename", "rm",
	"spawn", "spawnfile", "stat", "symlink",
	"truncate",
	"unlink", "unwatchfile", "utimes",
	"watchfile", "write", "writefile", "writev",
}

var keywordsForProcess = []string{
	"binding", "constructor", "env", "global", "main", "mainmodule", "process", "require",
}

var fnsForConsole = []string{
	"debug", "error", "info", "trace", "warn",
}

var fnsForRequire = []string{
	"resolve", "main", "extensions", "cache",
}

func checkPattern1(value string) bool {
	snippets := strings.Split(value, ".")

	switch snippets[0] {
	case "this":
		return snippets[1] == "constructor"
	case "string":
	    return snippets[1] == "fromcharcode"
	case "module":
		return snippets[1] == "exports"
	case "console":
		return slices.Contains(fnsForConsole, snippets[1])
	case "require":
		return slices.Contains(fnsForRequire, snippets[1])
	case "process":
		return slices.Contains(fnsForProcess, snippets[1]) || slices.Contains(keywordsForProcess, snippets[1])
	}

	return false
}

func checkPattern2(value string) bool {
	idx := strings.IndexByte(value, '[')
	key := value[:idx]

	// ["xxx"]
	attr := value[idx+2 : len(value)-2]

	switch key {
	case "console":
		return slices.Contains(fnsForConsole, attr)
	case "require":
		return slices.Contains(fnsForRequire, attr)
	case "process":
		return slices.Contains(fnsForProcess, attr) || slices.Contains(keywordsForProcess, attr)
	}

	return false
}



func matchInsecureUnserialize(data []byte) bool {

//line insecure_unserialize.rl:80

//line insecure_unserialize.go:85
const insecure_unserialize_start int = 100
const insecure_unserialize_first_final int = 100
const insecure_unserialize_error int = -1

const insecure_unserialize_en_main int = 100


//line insecure_unserialize.rl:81
    cs, p, pe, eof := 0, 0, len(data), len(data)

    var ts, te, act int
    _ = act

    
//line insecure_unserialize.go:100
	{
	cs = insecure_unserialize_start
	ts = 0
	te = 0
	act = 0
	}

//line insecure_unserialize.go:108
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 100:
		goto st_case_100
	case 101:
		goto st_case_101
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 102:
		goto st_case_102
	case 15:
		goto st_case_15
	case 103:
		goto st_case_103
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 104:
		goto st_case_104
	case 105:
		goto st_case_105
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 106:
		goto st_case_106
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 107:
		goto st_case_107
	case 108:
		goto st_case_108
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 109:
		goto st_case_109
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 110:
		goto st_case_110
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 111:
		goto st_case_111
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 112:
		goto st_case_112
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 113:
		goto st_case_113
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 114:
		goto st_case_114
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 115:
		goto st_case_115
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	}
	goto st_out
tr0:
//line insecure_unserialize.rl:124
p = (te) - 1

	goto st100
tr15:
//line insecure_unserialize.rl:108
te = p+1
{
                return true
            }
	goto st100
tr16:
//line NONE:1
	switch act {
	case 1:
	{p = (te) - 1

                return true
            }
	case 2:
	{p = (te) - 1

                if checkPattern1(string(data[ts:te])) {
                    return true
                }
            }
	default:
	{p = (te) - 1
}
	}
	
	goto st100
tr93:
//line insecure_unserialize.rl:124
te = p+1

	goto st100
tr106:
//line insecure_unserialize.rl:124
te = p
p--

	goto st100
tr108:
//line insecure_unserialize.rl:112
te = p
p--
{
                if checkPattern1(string(data[ts:te])) {
                    return true
                }
            }
	goto st100
tr109:
//line insecure_unserialize.rl:118
te = p
p--
{
                if checkPattern2(string(data[ts:te])) {
                    return true
                }
            }
	goto st100
tr110:
//line insecure_unserialize.rl:118
te = p+1
{
                if checkPattern2(string(data[ts:te])) {
                    return true
                }
            }
	goto st100
tr114:
//line insecure_unserialize.rl:108
te = p
p--
{
                return true
            }
	goto st100
	st100:
//line NONE:1
ts = 0

		if p++; p == pe {
			goto _test_eof100
		}
	st_case_100:
//line NONE:1
ts = p

//line insecure_unserialize.go:440
		switch data[p] {
		case 40:
			goto tr94
		case 95:
			goto tr96
		case 98:
			goto tr97
		case 99:
			goto tr98
		case 101:
			goto tr99
		case 102:
			goto tr100
		case 103:
			goto tr101
		case 109:
			goto tr102
		case 110:
			goto tr103
		case 112:
			goto tr104
		case 114:
			goto tr105
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr95
			}
		case data[p] >= 65:
			goto tr95
		}
		goto tr93
tr94:
//line NONE:1
te = p+1

	goto st101
	st101:
		if p++; p == pe {
			goto _test_eof101
		}
	st_case_101:
//line insecure_unserialize.go:484
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr106
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr106
			}
		default:
			goto tr106
		}
		goto st0
	st0:
		if p++; p == pe {
			goto _test_eof0
		}
	st_case_0:
		if data[p] == 99 {
			goto st1
		}
		goto tr0
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		if data[p] == 104 {
			goto st2
		}
		goto tr0
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		if data[p] == 105 {
			goto st3
		}
		goto tr0
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		if data[p] == 108 {
			goto st4
		}
		goto tr0
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		if data[p] == 100 {
			goto st5
		}
		goto tr0
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		if data[p] == 95 {
			goto st6
		}
		goto tr0
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		if data[p] == 112 {
			goto st7
		}
		goto tr0
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		if data[p] == 114 {
			goto st8
		}
		goto tr0
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		if data[p] == 111 {
			goto st9
		}
		goto tr0
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		if data[p] == 99 {
			goto st10
		}
		goto tr0
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		if data[p] == 101 {
			goto st11
		}
		goto tr0
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
		if data[p] == 115 {
			goto st12
		}
		goto tr0
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
		if data[p] == 115 {
			goto st13
		}
		goto tr0
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr0
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr0
			}
		default:
			goto tr0
		}
		goto st14
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
		if data[p] == 41 {
			goto tr15
		}
		goto tr0
tr95:
//line NONE:1
te = p+1

//line insecure_unserialize.rl:124
act = 4;
	goto st102
	st102:
		if p++; p == pe {
			goto _test_eof102
		}
	st_case_102:
//line insecure_unserialize.go:654
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr106
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr17
			}
		case data[p] >= 65:
			goto tr17
		}
		goto tr16
tr17:
//line NONE:1
te = p+1

//line insecure_unserialize.rl:112
act = 2;
	goto st103
	st103:
		if p++; p == pe {
			goto _test_eof103
		}
	st_case_103:
//line insecure_unserialize.go:696
		if data[p] == 46 {
			goto st15
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr17
			}
		case data[p] >= 65:
			goto tr17
		}
		goto tr108
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
		switch data[p] {
		case 34:
			goto st18
		case 39:
			goto st18
		case 96:
			goto st18
		}
		goto tr0
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st19
			}
		case data[p] >= 65:
			goto st19
		}
		goto tr16
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		switch data[p] {
		case 34:
			goto st104
		case 39:
			goto st104
		case 96:
			goto st104
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st19
			}
		case data[p] >= 65:
			goto st19
		}
		goto tr16
	st104:
		if p++; p == pe {
			goto _test_eof104
		}
	st_case_104:
		if data[p] == 93 {
			goto tr110
		}
		goto tr109
tr96:
//line NONE:1
te = p+1

	goto st105
	st105:
		if p++; p == pe {
			goto _test_eof105
		}
	st_case_105:
//line insecure_unserialize.go:798
		switch data[p] {
		case 36:
			goto st20
		case 95:
			goto st31
		}
		goto tr106
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
		if data[p] == 36 {
			goto st21
		}
		goto tr0
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		if data[p] == 110 {
			goto st22
		}
		goto tr0
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		if data[p] == 100 {
			goto st23
		}
		goto tr0
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
		if data[p] == 95 {
			goto st24
		}
		goto tr0
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
		if data[p] == 102 {
			goto st25
		}
		goto tr0
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		if data[p] == 117 {
			goto st26
		}
		goto tr0
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
		if data[p] == 110 {
			goto st27
		}
		goto tr0
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
		if data[p] == 99 {
			goto st28
		}
		goto tr0
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
		if data[p] == 36 {
			goto st29
		}
		goto tr0
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
		if data[p] == 36 {
			goto st30
		}
		goto tr0
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
		if data[p] == 95 {
			goto tr15
		}
		goto tr0
	st31:
		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
		if data[p] == 106 {
			goto st32
		}
		goto tr0
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
		if data[p] == 115 {
			goto st33
		}
		goto tr0
	st33:
		if p++; p == pe {
			goto _test_eof33
		}
	st_case_33:
		if data[p] == 95 {
			goto st34
		}
		goto tr0
	st34:
		if p++; p == pe {
			goto _test_eof34
		}
	st_case_34:
		if data[p] == 102 {
			goto st35
		}
		goto tr0
	st35:
		if p++; p == pe {
			goto _test_eof35
		}
	st_case_35:
		if data[p] == 117 {
			goto st36
		}
		goto tr0
	st36:
		if p++; p == pe {
			goto _test_eof36
		}
	st_case_36:
		if data[p] == 110 {
			goto st37
		}
		goto tr0
	st37:
		if p++; p == pe {
			goto _test_eof37
		}
	st_case_37:
		if data[p] == 99 {
			goto st38
		}
		goto tr0
	st38:
		if p++; p == pe {
			goto _test_eof38
		}
	st_case_38:
		if data[p] == 116 {
			goto st39
		}
		goto tr0
	st39:
		if p++; p == pe {
			goto _test_eof39
		}
	st_case_39:
		if data[p] == 105 {
			goto st40
		}
		goto tr0
	st40:
		if p++; p == pe {
			goto _test_eof40
		}
	st_case_40:
		if data[p] == 111 {
			goto st41
		}
		goto tr0
	st41:
		if p++; p == pe {
			goto _test_eof41
		}
	st_case_41:
		if data[p] == 110 {
			goto tr15
		}
		goto tr0
tr97:
//line NONE:1
te = p+1

//line insecure_unserialize.rl:124
act = 4;
	goto st106
	st106:
		if p++; p == pe {
			goto _test_eof106
		}
	st_case_106:
//line insecure_unserialize.go:1016
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 105:
			goto st42
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr106
	st42:
		if p++; p == pe {
			goto _test_eof42
		}
	st_case_42:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 110:
			goto st43
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st43:
		if p++; p == pe {
			goto _test_eof43
		}
	st_case_43:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 100:
			goto st44
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st44:
		if p++; p == pe {
			goto _test_eof44
		}
	st_case_44:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 105:
			goto st45
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st45:
		if p++; p == pe {
			goto _test_eof45
		}
	st_case_45:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 110:
			goto st46
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st46:
		if p++; p == pe {
			goto _test_eof46
		}
	st_case_46:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 103:
			goto st47
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st47:
		if p++; p == pe {
			goto _test_eof47
		}
	st_case_47:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto tr49
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
tr49:
//line NONE:1
te = p+1

//line insecure_unserialize.rl:108
act = 1;
	goto st107
	st107:
		if p++; p == pe {
			goto _test_eof107
		}
	st_case_107:
//line insecure_unserialize.go:1176
		switch data[p] {
		case 34:
			goto st18
		case 39:
			goto st18
		case 96:
			goto st18
		}
		goto tr114
tr98:
//line NONE:1
te = p+1

//line insecure_unserialize.rl:124
act = 4;
	goto st108
	st108:
		if p++; p == pe {
			goto _test_eof108
		}
	st_case_108:
//line insecure_unserialize.go:1198
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 111:
			goto st48
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr106
	st48:
		if p++; p == pe {
			goto _test_eof48
		}
	st_case_48:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 110:
			goto st49
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st49:
		if p++; p == pe {
			goto _test_eof49
		}
	st_case_49:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 115:
			goto st50
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st50:
		if p++; p == pe {
			goto _test_eof50
		}
	st_case_50:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 116:
			goto st51
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st51:
		if p++; p == pe {
			goto _test_eof51
		}
	st_case_51:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 114:
			goto st52
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st52:
		if p++; p == pe {
			goto _test_eof52
		}
	st_case_52:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 117:
			goto st53
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st53:
		if p++; p == pe {
			goto _test_eof53
		}
	st_case_53:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 99:
			goto st54
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st54:
		if p++; p == pe {
			goto _test_eof54
		}
	st_case_54:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 116:
			goto st55
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st55:
		if p++; p == pe {
			goto _test_eof55
		}
	st_case_55:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 111:
			goto st56
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st56:
		if p++; p == pe {
			goto _test_eof56
		}
	st_case_56:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 114:
			goto st47
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
tr99:
//line NONE:1
te = p+1

//line insecure_unserialize.rl:124
act = 4;
	goto st109
	st109:
		if p++; p == pe {
			goto _test_eof109
		}
	st_case_109:
//line insecure_unserialize.go:1426
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 110:
			goto st57
		case 118:
			goto st58
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr106
	st57:
		if p++; p == pe {
			goto _test_eof57
		}
	st_case_57:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 118:
			goto st47
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st58:
		if p++; p == pe {
			goto _test_eof58
		}
	st_case_58:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 97:
			goto st59
		}
		switch {
		case data[p] > 90:
			if 98 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st59:
		if p++; p == pe {
			goto _test_eof59
		}
	st_case_59:
		switch data[p] {
		case 46:
			goto st15
		case 91:
			goto st17
		case 108:
			goto st60
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
	st60:
		if p++; p == pe {
			goto _test_eof60
		}
	st_case_60:
		switch data[p] {
		case 40:
			goto tr15
		case 46:
			goto st15
		case 91:
			goto st17
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st16
			}
		case data[p] >= 65:
			goto st16
		}
		goto tr0
tr100:
//line NONE:1
te = p+1
